update temporary landing page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <h1>Emmanuel P. Ablaza</h1>
-    <h2> Portfolio </h2>
+      <h1>Display Page Under Construction - Pardon our dust</h1>
+      <h2> Portfolio to be shown here SOON </h2>
   </body>
 </html>
