update landing page template with Bootstrap images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   
   <body>
       <h1>Display Page Under Construction - Pardon our dust</h1>
+      <img src="cinqueterre.jpg" class="img-rounded" alt="Rounded edges picture"> 
       <h2> Portfolio to be shown here SOON </h2>
+      <img src="sample.png" class="img-responsive"  alt="Chania"> 
+      <h3> Experience</h3>
+       <img src="cinqueterre.jpg" class="img-thumbnail" alt="Cinque Terre"> 
   </body>
 </html>
