--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>Sample Resume</title>
+    <title>Online Resume</title>
   </head>
   
   <body>
       <h1>Display Page Under Construction - Pardon our dust</h1>
-      <img src="cinqueterre.jpg" class="img-rounded" alt="Rounded edges picture"> 
+      <img src="EPA NLP(hieroglyphics).jpg" class="img-rounded" alt="Rounded edges picture"> 
       <h2> Portfolio to be shown here SOON </h2>
-      <img src="sample.png" class="img-responsive"  alt="Chania"> 
+      <img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Chania"> 
       <h3> Experience</h3>
-       <img src="cinqueterre.jpg" class="img-thumbnail" alt="Cinque Terre"> 
+       <img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Cinque Terre"> 
   </body>
 </html>
