set initial image layout

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   
   <body>
       <h1>Display Page Under Construction - Pardon our dust</h1>
-      <img src="EPA NLP(hieroglyphics).jpg" class="img-rounded" alt="Rounded edges pic of Archaelogist"> 
       <h2> Portfolio to be shown here SOON </h2>
-      <img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background"> 
       <h3> Experience</h3>
       <img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
+      <img src="EPA NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist"> 
+      <img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background"> 
   </body>
 </html>
