experiment with some formats using html5

--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
   </head>
   
   <body>
-      <h1>Display Page Under Construction - Pardon our dust</h1>
-      <h2> Portfolio to be shown here SOON </h2>
-      <h3> Experience</h3>
-      <img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
-      <img src="EPA NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist"> 
-      <img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background"> 
+		<h1>Display Page Under Construction - Pardon our dust</h1>
+		<h2> Portfolio to be shown here SOON </h2>
+		<h3> Experience</h3>
+		<!-- Left-aligned -->
+		<div class="media-body">
+			<h4 class="media heading">Pictures of me</h4>
+			<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
+			<div class="media-right">
+				<img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
+				<img src="EPA NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist"> 
+				<img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background">
+			</div>
+		</div>
   </body>
 </html>
