try to fix case sensitivity of image filenames

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<h4 class="media heading">Pictures of me</h4>
 			<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
 			<div class="media-right">
-				<img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
-				<img src="EPA NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist"> 
-				<img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background">
+				<img src="EPA ML(LogisticReg).JPG" class="img-thumbnail" alt="Picture of ML Nerd"> 
+				<img src="EPA NLP(hieroglyphics).JPG" alt="Rounded edges pic of Archaelogist"> 
+				<img src="DreamBackyardMRSL.JPG" class="img-responsive"  alt="Background">
 			</div>
 		</div>
   </body>
