--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
   </head>
   
   <body>
+	<div class="container-fluid">
 		<h1>Display Page Under Construction - Pardon our dust</h1>
 		<h2> Portfolio to be shown here SOON </h2>
 		<h3> Experience</h3>
 		<!-- Left-aligned -->
-		<div class="media-body">
-			<h4 class="media heading">Pictures of me</h4>
-			<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
-			<div class="media-right">
-				<img src="EPA ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
-				<img src="EPA NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist">
-				<img src="DreamBackyardMRSL.jpg" class="img-responsive"  alt="Background">
+		<div class="media">
+			<img class="mr-3" src="EPA_ML(LogisticReg).jpg" alt="Generic Placeholder Image"> 
+			<div class="media-body">
+				<h4 class="mt-0">Pictures of me</h4>
+				<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
+					<img src="EPA_ML(LogisticReg).jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
+					<img src="EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist">
+					<img src="DreamYard.jpg" class="img-responsive"  alt="Background">
 			</div>
 		</div>
+	</div>div>
   </body>
 </html>
