try another variation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 					<img src="DreamYard.jpg" class="img-responsive"  alt="Background">
 			</div>
 		</div>
-	</div>div>
+	</div>
   </body>
 </html>
