forward slash not backslash -- argghhhh

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<h3> Experience</h3>
 		<!-- Left-aligned -->
 		<div class="media">
-			<img class="mr-3" src="images\epa_ml.jpg" alt="Generic Placeholder Image"> 
+			<img class="mr-3" src="images/epa_ml.jpg" alt="Generic Placeholder Image"> 
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
 				<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
-					<img src="images\epa_ml.jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
-					<img src="images\EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist">
-					<img src="images\DreamYard.jpg" class="img-responsive"  alt="Background">
+					<img src="images/epa_ml.jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
+					<img src="images/EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist">
+					<img src="images/DreamYard.jpg" class="img-responsive"  alt="Background">
 			</div>
 		</div>
 	</div>
