experiment with bootstrap sizing width and height utilities

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 		<h3> Experience</h3>
 		<!-- Left-aligned -->
 		<div class="media">
+			<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
 			<img class="mr-3" src="images/epa_ml.jpg" alt="Generic Placeholder Image"> 
+			
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
-				<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
-					<img src="images/epa_ml.jpg" class="img-thumbnail" alt="Picture of ML Nerd"> 
-					<img src="images/EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist">
+				<div style="height: 100px; background-color: rgba(255,0,0,0.1);">
+					<div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
+					<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
+					<img src="images/EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist" >
 					<img src="images/DreamYard.jpg" class="img-responsive"  alt="Background">
+			
+				</div>	
 			</div>
 		</div>
 	</div>
