--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		<!-- Left-aligned -->
 		<div class="media">
 			<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
-			<img class="mr-3" src="images/epa_ml.jpg" alt="Generic Placeholder Image"> 
+			<img src="images/epa_ml.jpg" class="thumb-nail" alt="Generic Placeholder Image"> 
 			
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
 				<div style="height: 100px; background-color: rgba(255,0,0,0.1);">
 					<div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
 					<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
-					<img src="images/EPA_NLP(hieroglyphics).jpg" alt="Rounded edges pic of Archaelogist" >
+					<img src="images/EPA_NLP(hieroglyphics).jpg" class="rounded-edges" alt="Rounded edges pic of Archaelogist" >
 					<img src="images/DreamYard.jpg" class="img-responsive"  alt="Background">
 			
 				</div>	
