--- a/index.html
+++ b/index.html
@@ -11,22 +11,28 @@
   </head>
   
   <body>
-	<div class="container-fluid">
+	<div class="container">
 		<h1>Display Page Under Construction - Pardon our dust</h1>
 		<h2> Portfolio to be shown here SOON </h2>
-		<h3> Experience</h3>
+		<div class="card" style="width: 18rem;">
+			<img class="card-img-top" src="something.jpg" alt="Card image cap">
+			<div class="card-body">
+			  <p class="card-text">Some quick sample text here for skill or expertise (idea: build element table or lego)"</p>
+			</div>
+		</div>
+		<h3> Some dates and history</h3>
 		<!-- Left-aligned -->
 		<div class="media">
 			<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
-			<img src="images/epa_ml.jpg" class="thumb-nail" alt="Generic Placeholder Image"> 
+			<img src="images/epa_ml.jpg" class="img-thumbnail" alt="Generic Placeholder Image"> 
 			
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
 				<div style="height: 100px; background-color: rgba(255,0,0,0.1);">
 					<div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
 					<p>The quick brown data scientist jumps over the lazy Egyptian tomb.</p>
-					<img src="images/EPA_NLP(hieroglyphics).jpg" class="rounded-edges" alt="Rounded edges pic of Archaelogist" >
-					<img src="images/DreamYard.jpg" class="img-responsive"  alt="Background">
+					<img src="images/EPA_NLP(hieroglyphics).jpg" class="rounded" alt="Rounded edges pic of Archaelogist" height="225">
+					<img src="images/DreamYard.jpg" class="img-fluid"  alt="Background">
 			
 				</div>	
 			</div>
