--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>Display Page Under Construction - Pardon our dust</h1>
 		<h2> Portfolio to be shown here SOON </h2>
 		<div class="card" style="width: 18rem;">
-			<img class="card-img-top" src="something.jpg" alt="Card image cap">
+			<img class="card-img-top" src="images/AddCart.JPG" alt="Card image cap">
 			<div class="card-body">
 			  <p class="card-text">Some quick sample text here for skill or expertise (idea: build element table or lego)"</p>
 			</div>
@@ -24,7 +24,8 @@
 		<!-- Left-aligned -->
 		<div class="media">
 			<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
-			<img src="images/epa_ml.jpg" class="img-thumbnail" alt="Generic Placeholder Image"> 
+			<p>Sample text after width 5%</p>
+			<img src="images/EPA_ML(LogisticReg).jpg" class="img-thumbnail" alt="Generic Placeholder Image"> 
 			
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
