Straight add and commit

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<!-- Left-aligned -->
 		<div class="media">
 			<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
-			<p>Sample text after width 5%</p>
-			<img src="images/EPA_ML(LogisticReg).jpg" class="img-thumbnail" alt="Generic Placeholder Image"> 
+			<p>Sample text after width 50%</p>
+			<img class="img-thumbnail" src="images/EPA_ML(LogisticReg).jpg" alt="Generic Placeholder Image"> 
 			
 			<div class="media-body">
 				<h4 class="mt-0">Pictures of me</h4>
