--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ extra_css: "album.css"
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                {% include includes/icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %}
+                <img src="includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail">
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -162,7 +162,7 @@ extra_css: "album.css"
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                {% include includes/icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %}
+                <img src="includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail">
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -177,7 +177,7 @@ extra_css: "album.css"
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                {% include includes/icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %}
+                <img src="includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail">
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -192,7 +192,7 @@ extra_css: "album.css"
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                {% include includes/icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %}
+                <img src="includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail">
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
