try to remove % include in comment

--- a/album.html
+++ b/album.html
@@ -6,7 +6,7 @@ extra_css: "album.css"
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- do include tricks later {% include header.html %} -->
+    <!-- do include tricks later ..open brace percent include header.html close  -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
