--- a/album.html
+++ b/album.html
@@ -70,7 +70,7 @@ extra_css: "album.css"
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img src="icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail">
+                <svg xmlns="_includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"></svg>
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
