--- a/index_draft.html
+++ b/index_draft.html
@@ -11,14 +11,7 @@ extra_css: "album.css"
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS only -->
-    <!-- 4.0.0 link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" -->
-    {% highlight html %}
-    <!-- JS, Popper.js, and jQuery -->
-    <link rel="stylesheet" href="{{ site.cdn.css }}" integrity="{{ site.cdn.css_hash }}" crossorigin="anonymous">
-    <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
-    <script src="{{ site.cdn.popper }}" integrity="{{ site.cdn.popper_hash }}" crossorigin="anonymous"></script>
-    <script src="{{ site.cdn.js }}" integrity="{{ site.cdn.js_hash }}" crossorigin="anonymous"></script>
-    {% endhighlight %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>My Online Portfolio</title>
 
     <!-- Custom styles for this template -->
@@ -153,7 +146,11 @@ extra_css: "album.css"
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %}
+                <!-- {% include icons/placeholder.svg width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" %} -->
+                <svg class="bd-placeholder-img" width="95%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Project X">
+                    <rect width="100%" height="100%" fill="#003399">
+                    <text x="50%" y="50%" fill="#ffff66" dy=".3em">Project 1</text>
+                </svg>
                 <!-- img src="_includes/icons/placeholder.svg" width="100%" height="225" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail" -->
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
